--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="row">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
-            <p><i class="fas fa-paper-plane"></i> ruben_duarte15@hotmail.com</p>
+            <p><i class="fas fa-paper-plane"></i> ruben.duarte.dev@outlook.com</p>
             <div class="social-icons">
             <a href="https://www.linkedin.com/in/r%C3%BAben-duarte-04bb7b15a/"><i class="fa-brands fa-linkedin"></i></a>Click to visit my LinkedIn
           </div>
